--- a/index.css
+++ b/index.css
@@ -1,8 +1,144 @@
 body {
     margin: 0;
+    min-height: 100vh;           /* Make sure body takes full screen height */
+    display: flex;               /* Turn body into a flex container */
+    justify-content: center;     /* Center horizontally */
+    align-items: center;         /* Center vertically */
+    background-color: black;
+    
 }
 
 .container {
     display: flex;
     justify-content: space-around;
+        
+}
+.supercontainer {
+    background: #1B244A;
+    padding-bottom: 30px;
+    width: 800px;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+
+}
+
+p {
+    font-family: Verdana;
+    font-weight: 200;
+    font-size: 20px;
+    color: #EEEEEE;
+    width: 600px;
+    
+    
+}
+
+.mainclass {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.mainclass2 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 20px;
+}
+
+.mainheading {
+    font-family: Verdana;
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    color: #EEEEEE;
+}
+
+
+.subClass {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;    
+}
+
+.master-btn {
+    display: flex;   /* Make the parent a flex container */
+    gap: 5px;       /* 5px space between buttons */
+  }
+  
+
+#hscore, #gscore {
+    background-color: #080001;
+    color: #F94F6D;
+    width: 300px;
+    height: 200px;
+    border-radius: 5px;
+    border: 2px solid wheat;
+    font-family: 'Cursed Timer ULiL', sans-serif;
+    font-weight: 400;
+    font-size: 110px;
+    line-height: 200px;
+    text-align: center;
+    margin: 20px;
+
+    
+    
+}
+
+
+.save-btn {
+    width: 50px;
+    height: 45px;
+    font-size: 15px;
+    border: 2px solid #9AABD8;
+    color: #9AABD8;
+    background: #1B244A;
+    font-family: 'Cursed Timer ULiL', sans-serif;
+}
+
+.mastersave-btn {
+    width: 160px;
+    height: 45px;
+    font-size: 25px;
+    border: 2px solid #52b788;
+    border-radius: 10px;
+    color: #132a13;
+    background: #d9ed92;
+    font-family: 'Cursed Timer ULiL', sans-serif;
+}
+
+.newgame-btn {
+    width: 160px;
+    height: 45px;
+    font-size: 25px;
+    border: 2px solid #52b788;
+    border-radius: 10px;
+    color: #e6be9c;
+    background: #1B244A;
+    font-family: 'Cursed Timer ULiL', sans-serif;
+}
+
+.game-buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+h3 {
+    width: 149px;
+    height: 15px;
+    top: 68px;
+    left: 85px;
+    font-family: Verdana;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 35.89px;
+    letter-spacing: 0%;
+    text-align: center;
+    color: #EEEEEE;    
+
 }
